notifier: Declare the reboot notification in the notifyrc file

BUG: 423493